welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: not found: value color
	setCouleurBrosse( c:color.lightGray)
                            ^