welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
for(i<-0 to 3) {
	setCouleurBrosse( c:color.lightGray)
	baisseBrosse() ;
	gauche();
	avance();
	leveBrosse();
	droite();
	avance();
	baisseBrosse();
	gauche();
	avance();
	leveBrosse();
	gauche();
	avance();
	baisseBrosse();
}
}
 
